# openapic

./: .gitignore  Cargo.toml  README.md
src/: backend-go.rs  fsutil.rs  lib.rs  openapic.rs  schema_normalizer.rs  template_renderer.rs
templates/go/: model.go.j2
tests/: req.json
