[package]
name = "openapic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "openapic"

[[bin]]
name = "openapic"
path = "src/openapic.rs"

[[bin]]
name = "backend-go"
path = "src/backend-go.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
clap_derive = "4.4.7"
openapiv3 = "2.0.0"
serde = "1.0.197"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
maplit = "1.0.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.0"
askama = "0.12.1"
